// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip Component renders correctly with all props combined 1`] = `
<View
  className="self-start px-4 py-2 text-base rounded-full bg-blue-500 border-blue-500  combined-chip"
>
  <Text
    className="font-medium text-white"
  >
    Combined Props Chip
  </Text>
</View>
`;

exports[`Chip Component renders correctly with bordered variant 1`] = `
<View
  className="self-start px-3 py-1.5 text-sm rounded-full bg-transparent border-slate-500 border "
>
  <Text
    className="font-medium text-slate-700 dark:text-slate-200"
  >
    Bordered Chip
  </Text>
</View>
`;

exports[`Chip Component renders correctly with custom className 1`] = `
<View
  className="self-start px-3 py-1.5 text-sm rounded-full bg-slate-500/20 border-slate-500/30  custom-chip"
>
  <Text
    className="font-medium text-slate-700 dark:text-slate-200"
  >
    Custom Chip
  </Text>
</View>
`;

exports[`Chip Component renders correctly with danger color 1`] = `
<View
  className="self-start px-3 py-1.5 text-sm rounded-full bg-red-500/20 border-red-500/30  "
>
  <Text
    className="font-medium text-red-700 dark:text-red-200"
  >
    Danger Chip
  </Text>
</View>
`;

exports[`Chip Component renders correctly with default props 1`] = `
<View
  className="self-start px-3 py-1.5 text-sm rounded-full bg-slate-500/20 border-slate-500/30  "
>
  <Text
    className="font-medium text-slate-700 dark:text-slate-200"
  >
    Default Chip
  </Text>
</View>
`;

exports[`Chip Component renders correctly with flat variant 1`] = `
<View
  className="self-start px-3 py-1.5 text-sm rounded-full bg-slate-500/20 border-slate-500/30  "
>
  <Text
    className="font-medium text-slate-700 dark:text-slate-200"
  >
    Flat Chip
  </Text>
</View>
`;

exports[`Chip Component renders correctly with ghost variant 1`] = `
<View
  className="self-start px-3 py-1.5 text-sm rounded-full bg-transparent hover:bg-slate-500/20  "
>
  <Text
    className="font-medium text-slate-700 dark:text-slate-200"
  >
    Ghost Chip
  </Text>
</View>
`;

exports[`Chip Component renders correctly with large size 1`] = `
<View
  className="self-start px-4 py-2 text-base rounded-full bg-slate-500/20 border-slate-500/30  "
>
  <Text
    className="font-medium text-slate-700 dark:text-slate-200"
  >
    Large Chip
  </Text>
</View>
`;

exports[`Chip Component renders correctly with primary color 1`] = `
<View
  className="self-start px-3 py-1.5 text-sm rounded-full bg-blue-500/20 border-blue-500/30  "
>
  <Text
    className="font-medium text-blue-700 dark:text-blue-200"
  >
    Primary Chip
  </Text>
</View>
`;

exports[`Chip Component renders correctly with secondary color 1`] = `
<View
  className="self-start px-3 py-1.5 text-sm rounded-full bg-purple-500/20 border-purple-500/30  "
>
  <Text
    className="font-medium text-purple-700 dark:text-purple-200"
  >
    Secondary Chip
  </Text>
</View>
`;

exports[`Chip Component renders correctly with small size 1`] = `
<View
  className="self-start px-2 py-1 text-xs rounded-full bg-slate-500/20 border-slate-500/30  "
>
  <Text
    className="font-medium text-slate-700 dark:text-slate-200"
  >
    Small Chip
  </Text>
</View>
`;

exports[`Chip Component renders correctly with solid variant 1`] = `
<View
  className="self-start px-3 py-1.5 text-sm rounded-full bg-slate-500 border-slate-500  "
>
  <Text
    className="font-medium text-white"
  >
    Solid Chip
  </Text>
</View>
`;
